--- a/style/dc.scss
+++ b/style/dc.scss
@@ -34,7 +34,7 @@ $font_sans_serif: sans-serif;
         &.bar {
             stroke: none;
             cursor: pointer;
-            &:hover {
+            &:hover,&:focus {
                 fill-opacity: .5;
             }
         }
@@ -50,7 +50,7 @@ $font_sans_serif: sans-serif;
         &.external {
             fill: $color_black;
         }
-        :hover, &.highlight {
+        :hover,:focus &.highlight {
             fill-opacity: .8;
         }
     }
@@ -123,7 +123,7 @@ $font_sans_serif: sans-serif;
     g {
         &.state {
             cursor: pointer;
-            :hover {
+            :hover,:focus {
                 fill-opacity: .8;
             }
             path {
@@ -142,7 +142,7 @@ $font_sans_serif: sans-serif;
             rect {
                 fill-opacity: 0.8;
                 cursor: pointer;
-                &:hover {
+                &:hover,&:focus {
                     fill-opacity: 0.6;
                 }
             }
@@ -173,7 +173,7 @@ $font_sans_serif: sans-serif;
     .node {
         font-size: 0.7em;
         cursor: pointer;
-        :hover {
+        :hover,:focus {
             fill-opacity: .8;
         }
     }
